Display and minor fixes
- search box rendering wrong fixed (search icon is slightly off center
now, will have to find another way to fix that)
- updated material UI rating import to fit with material UI v5
- atempted to fix 400 error when navigating with search box. No success

"so if u start in the oceania region and go straight to anyplace in the
americas without going to a diff region first (asia africa europe etc)
it will give a 400 error.
so if u wanna go straight to LA u hv to go to some random place in
africa europe or asia first, AND THEN go to LA to avoid geting a 400
error.
this is what ive learnt from trail and error lol, i hv no idea how to
fix it or why this error occurs.
and after u get the 400 error its permanent. u hv to reload the page to
get rid of it"

--- a/tecttitans-app/src/maps/Header/HeaderStyle.css
+++ b/tecttitans-app/src/maps/Header/HeaderStyle.css
@@ -29,7 +29,7 @@
 }
 
 .search .inputInput {
-    padding-left: calc(1em + 10px);
+    padding-left: 4px;
     transition: width 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     width: 100%;
 }
